[gd_scene load_steps=16 format=2]

[ext_resource path="res://UI/Header.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/theme.tres" type="Theme" id=2]
[ext_resource path="res://SM_Screen.tres" type="Material" id=3]
[ext_resource path="res://Scenes/SceneBase.gd" type="Script" id=4]
[ext_resource path="res://UI/Components/KineticScrollContainer.gd" type="Script" id=5]
[ext_resource path="res://UI/ContentMain.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.972549, 0.972549, 0.972549, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item; 

uniform sampler2D gradient; 

void fragment() {
	COLOR = texture(gradient, vec2(UV.y, 0));
	//COLOR = vec4(UV.y,0,0,1);
}"

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.77709, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 4 )
shader_param/gradient = SubResource( 6 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxEmpty" id=9]

[node name="SceneBase" type="Panel"]
material = ExtResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.88776
margin_right = -1.8877
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
accent_color = Color( 0.592157, 0.909804, 0.192157, 1 )

[node name="ContentContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="Panel" parent="ContentContainer"]
margin_right = 1080.0
margin_bottom = 1920.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ContentContainer/Content"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ContentContainer/Content/VBoxContainer"]
margin_right = 1080.0
margin_bottom = 1920.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="ContentContainer/Content/VBoxContainer/MarginContainer"]
show_behind_parent = true
margin_right = 1080.0
margin_bottom = 1920.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )
scrollDirection = "Vertical"

[node name="ContentMain" type="VBoxContainer" parent="ContentContainer/Content/VBoxContainer/MarginContainer/ScrollContainer"]
margin_right = 1080.0
margin_bottom = 1920.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )

[node name="HSeparator" type="HSeparator" parent="ContentContainer/Content/VBoxContainer/MarginContainer/ScrollContainer/ContentMain"]
margin_right = 1080.0
margin_bottom = 346.0
custom_styles/separator = SubResource( 3 )
custom_constants/separation = 346
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeaderBG" type="PanelContainer" parent="ContentContainer/Content"]
self_modulate = Color( 0.592157, 0.909804, 0.192157, 1 )
material = SubResource( 7 )
anchor_right = 1.0
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="ContentContainer/Content/HeaderBG"]
margin_right = 1080.0
margin_bottom = 331.0
custom_styles/separator = SubResource( 3 )
custom_constants/separation = 331
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeaderContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="HeaderContainer"]
margin_right = 1080.0
margin_bottom = 100.0
custom_styles/separator = SubResource( 9 )
custom_constants/separation = 100

[node name="Header" parent="HeaderContainer" instance=ExtResource( 1 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 104.0
margin_right = 1080.0
margin_bottom = 261.0
